tests/ui/error-codes/E0093.rs
#![feature(intrinsics)]
extern "crablang-intrinsic" {
    fn foo();
    //~^ ERROR E0093
}

fn main() {
}
